--- a/Russian/main/Browser.apk/res/values-ru/strings.xml
+++ b/Russian/main/Browser.apk/res/values-ru/strings.xml
@@ -505,12 +505,12 @@
      <string name="storage_internal">Внутренняя память</string>
      <string name="storage_sd_card">SD-карта</string>
      <string name="storage_usb">USB-накопитель</string>
-     <string name="sub_sync_item_browser_title_cloud_tab">Синхр. вкладки</string>
+     <string name="sub_sync_item_browser_title_cloud_tab">Синхр. вкладок</string>
      <string name="sub_sync_item_browser_title_cloud_tab_summary">Синхронизировать открытые вкладки на различных устройствах</string>
      <string name="sub_sync_item_browser_title_history">Синхр. истории</string>
      <string name="sub_sync_item_browser_title_history_summary">Синхронизировать историю просмотров</string>
-     <string name="sub_sync_item_browser_title_novel">Sync novels</string>
-     <string name="sub_sync_item_browser_title_novel_summary">Sync novels of browser</string>
+     <string name="sub_sync_item_browser_title_novel">Синхр. книг</string>
+     <string name="sub_sync_item_browser_title_novel_summary">Синхронизировать книги браузера</string>
      <string name="sync_item_browser_summary">Синхронизировать данные в облако - легкое использование браузера на разных устройствах</string>
      <string name="sync_item_browser_title">Синхронизация браузера</string>
      <string name="tab_history">История</string>
