--- a/Russian/main/Camera.apk/res/values-ru/strings.xml
+++ b/Russian/main/Camera.apk/res/values-ru/strings.xml
@@ -192,6 +192,7 @@
      <string name="pref_camera_antibanding_entry_3">Авто</string>
      <string name="pref_camera_antibanding_title">Устранение полос</string>
      <string name="pref_camera_audio_capture_title">Голос</string>
+	 <string name="pref_camera_auto_chroma_flash_title">Авто Chroma вспышка</string>
      <string name="pref_camera_auto_focus_title_entry_off">Выкл.</string>
      <string name="pref_camera_auto_focus_title_entry_on">Вкл.</string>
      <string name="pref_camera_auto_opti_zoom_title">Автом. увеличение, если соотношение больше чем 2</string>
